# arian-ai

./: .deployment  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  .replit  AGENTS.md  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  BENUTZERHANDBUCH 2.md  CHANGELOG.md  CLAUDE.md  DATA_FLOW_OVERVIEW.md  DEVELOPMENT.md  Dockerfile  FINAL_SCHEMA_DOCUMENTATION.md  HANDOVER_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  PHASE_1_STATUS.md  PHASE_2_PLAN.md  PROMPT_VARIABLE_FIXES_SUMMARY.md  PROPOSED_SCHEMA.md  README.md  SCHEMA_REDESIGN.md  SECURITY_HARDENING_PLAN.md  TESTING_GUIDE.md  drizzle.config.ts  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.md  requirements.txt  self_agent.md  start.sh  startup.sh  (+4 more)
.husky/: pre-commit
data/: influencing_techniques.csv  negotiation_tactics.csv  personality_types.csv  personality_types_simple.csv
docs/: AI_EVALUATION_BACKFILL.md  ARCHITECTURE.md  DATA_FLOW_ANALYSIS.md  DATA_MODEL_SPECIFICATION.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  DRIZZLE_PUSH_WORKAROUND.md  FIELD_COMPARISON.md  FRONTEND_REDESIGN_PROMPT.md  MIGRATION_PLAN.md  OPENAI_AGENTS_INTEGRATION.md  README.md  SIMULATION_EXECUTION_PLAN.md  SIMULATION_QUEUE.md  TESTING_GUIDE.md
migrations/: 0000_redundant_menace 3.sql  0001_adjust-product-results-scale.sql  0002_cleanup-schema 3.sql  0003_add-counterpart-personality.sql  0004_add-playbook-to-negotiations.sql  0005_update-userid-to-integer.sql  0006_add-performance-indexes.sql
scripts/: DEVELOPER_HANDOVER.md  README.md  README_NEGOTIATION.md  backfill-simulation-results 2.ts  copy-python.js  debug-product-results 2.ts  debug-queue.sh  debug-simulation-processing.ts  evaluate_simulation.py  (+25 more)
(+232 files in other folders)
