[project]
name = "arian-ai"
version = "0.1.0"
description = "AI-powered negotiation simulation platform"
requires-python = ">=3.11"

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length to match common Python conventions
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    "dist",
    "build",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore specific rules that may conflict with existing codebase
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Function is too complex
    "N802",  # Function name should be lowercase
    "N806",  # Variable in function should be lowercase
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore import errors in __init__ files
"__init__.py" = ["F401", "F403"]
# Ignore certain rules in test files
"tests/**/*.py" = ["S101", "F401", "F811"]
"scripts/tests/**/*.py" = ["S101", "F401", "F811"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"
